--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -6,7 +6,7 @@
     <title>Случайное число</title>
   </head>
   <body>
-    <h1>Генератор случаных чисел</h1>
+    <h1>Генератор случайных чисел</h1>
     <div class="container">
       <input
         type="number"
